--- a/assets/css/simple.links.admin.css
+++ b/assets/css/simple.links.admin.css
@@ -18,3 +18,11 @@
 #additional_fields.postbox .submit{
 	float: none;
 }
+
+.sl-updated{
+	border-left: 4px solid #7ad03a;
+	padding: 1px 12px;
+	background-color: #fff;
+	-webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
+	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);		
+}
