Added ability to quickly remove an additional field
git-svn-id: https://plugins.svn.wordpress.org/simple-links/branches/searchable@927785 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/assets/css/simple.links.admin.css
+++ b/assets/css/simple.links.admin.css
@@ -26,3 +26,10 @@
 	-webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);
 	box-shadow: 0 1px 1px 0 rgba(0,0,0,0.1);		
 }
+
+.link_delete_additional{
+	color: red;
+	font-weight: bold;
+	padding-left: 5px;
+	cursor: pointer;
+}
